# gakko-sync-calendar

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  entrypoint.sh  gakko_scraper.py  google_calendar_manager.py  pyproject.toml  requirements.txt  setup_cron.sh  sync.py
.github/workflows/: build-docker.yml  publish-docker.yml
src/: main.py
src/auth/: command.py  models.py
src/core/: __init__.py  command.py  command_context.py  config.py  exceptions.py  gakko_context.py  pipeline.py  protocols.py
src/integrations/: README.md
src/integrations/google/: calendar_repository.py  mock_calendar.py  models.py  publisher.py
src/tasks/: commands.py  dashboard.py  details.py  models.py
tests/: conftest.py
tests/auth/: test_commands.py
tests/core/: test_command_context.py  test_pipeline.py
tests/fixtures/: factories.py
tests/fixtures/html/: dashboard_template.html  task_detail_template.html
tests/integrations/: test_google_publisher.py  test_google_repo.py
tests/tasks/: test_commands.py  test_dashboard.py  test_details.py
tests/utils/: command_fakes.py  driver_fakes.py  response_fakes.py
