[project]
name = "gakko-reminder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.13.3",
    "google-api-python-client==2.166.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
    "pydantic==2.11.3",
    "pydantic-settings>=2.8.1",
    "requests==2.32.3",
    "selenium==4.30.0",
]
